fixed vertically aligning notification number to bubble

--- a/src/styles/navigation.css
+++ b/src/styles/navigation.css
@@ -53,6 +53,10 @@
     cursor: pointer;
 }
 
+.notification__count > span {
+    vertical-align: text-top;
+}
+
 .navigation__messageItem {
     flex: 1;
 }
